@@ -598,7 +598,7 @@ ff_match_boxtype( int * p )
     char *old_pos = ff.pos;
     int boxtype;
 
-    if (    ff_match_spaceless_string( &boxtype_name ) < 0 )
+    if ( ff_match_spaceless_string( &boxtype_name ) < 0 )
         return -1;
 
     if ( ! *boxtype_name || ( boxtype = boxtype_val( boxtype_name ) ) == -1 )
@@ -942,20 +942,21 @@ ff_match_type( char ** p )
  *  e) %U   match FL_Coord with positive value (requires FL_Coord *)
  *  f) %s   match string (trimmed of spaces at start and end) (requires char **)
  *  g) %S   match string (with all spaces) (requires char **)
- *  h) %f   match single-precision floating point value (requires float *)
- *  i) %D   match double floating point value (requires double *)
- *  j) %o   match object class (requires int *)
- *  k) %t   match type (requires char **)
- *  l) %b   match boxtype (requires int *)
- *  m) %c   match color (requires FL_COLOR *)
- *  n) %a   match align (requires int *)
- *  o) %p   match lstyle (requires int *)
- *  p) %q   match lsize (requires int *)
- *  q) %r   match resize (requires int *)
- *  r) %g   match gravity (requires int *)
- *  s) %x   match unit (requires int *)
- *  t) %v   match C variable  (requires char **)
- *  u) %k   match a key (word(s) with a final colon) (requires char **)
+ *  h) %h   match string, stopping at the first space (requires char **)
+ *  i) %f   match single-precision floating point value (requires float *)
+ *  j) %D   match double floating point value (requires double *)
+ *  k) %o   match object class (requires int *)
+ *  l) %t   match type (requires char **)
+ *  m) %b   match boxtype (requires int *)
+ *  n) %c   match color (requires FL_COLOR *)
+ *  o) %a   match align (requires int *)
+ *  p) %p   match lstyle (requires int *)
+ *  q) %q   match lsize (requires int *)
+ *  r) %r   match resize (requires int *)
+ *  s) %g   match gravity (requires int *)
+ *  t) %x   match unit (requires int *)
+ *  u) %v   match C variable  (requires char **)
+ *  v) %k   match a key (word(s) with a final colon) (requires char **)
  *
  * In case a string gets returned a copy must be made before the next
  * call of this function.
