@@ -1,3 +1,7 @@
+2013-08-11 Jens Thoms Toerring    <jt@toerring.de>
+
+	* fdesign: Bug fixes in handling of groups
+
 2013-08-10 Jens Thoms Toerring    <jt@toerring.de>
 
 	* fdesign: Included Paul Nichelsons patch for reading
